syntax = "proto3";

package telemetry.service.hubrouter;

import "google/protobuf/empty.proto";
import "telemetry/messages/hub_event.proto";

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.hubrouter";

service HubRouterController {
  rpc handleDeviceAction (telemetry.message.event.DeviceActionRequest)
      returns (google.protobuf.Empty);
}
